# metronix-memory

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.enterprise  INSTALL.md  Makefile  README.md  SECURITY.md  connecting_to_agent.md  docker-compose.full.yml  docker-compose.yml  install.md  install.sh  manual.md  prompts.md  pyproject.toml  uninstall.md
.github/: dependabot.yml
.metatron/: sync_state.json
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  HERMES_INTEGRATION.md  INSTALL.md  LEGACY.md  MCP_API.md  OPENCLAW_CONFIG.md  OPENCLAW_INTEGRATION.md  QUICKSTART_OPENCLAW.md  RAG_TRACE_FRONTEND.md  README.md  RENAME_MIGRATION.md  SKILLS.md  TODO.md  TROUBLESHOOTING_OPENCLAW.md  config.example.json  deploy-splade-service.md  eval-test-set.md  llm_call_sites_audit.md
embedding_proxy/: Dockerfile
examples/: memory_example.py  search_example.py
install/: bootstrap.ps1  bootstrap.sh  docker-compose.yml  install.sh  metatron-k8s.yaml  metronix-k8s.yaml
installer/: README.md  pyproject.toml
installer/src/metatron_installer/: cli.py  config.py  docker.py  envfile.py  preflight.py  profiles.py  prompter_questionary.py  runner.py  ui.py  wizard.py
installer/src/metronix_installer/: cli.py  preflight.py  profiles.py  runner.py  secrets.py  state.py  wizard.py
installer/tests/: test_answers.py  test_cli.py  test_cli_smoke.py  test_config.py  test_docker.py  test_envfile.py  test_launch.py  test_preflight.py  test_profiles.py  test_runner.py  test_secrets.py  test_state.py  test_wizard.py
scripts/: graph_process.py  (+7 more)
(+460 files in other folders)
