[project]
name = "metatron-installer"
version = "0.1.0"
description = "Cross-platform installer/wizard for the Metatron Core stack"
requires-python = ">=3.12"
dependencies = ["rich>=13.7", "questionary>=2.0", "pyyaml>=6.0"]

[project.scripts]
metatron-installer = "metatron_installer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metatron_installer"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
